--- a/packages/websites/coffeekraken-io/src/css/generic/s-code-example.css
+++ b/packages/websites/coffeekraken-io/src/css/generic/s-code-example.css
@@ -10,7 +10,8 @@ s-code-example {
 }
 
 .s-tabs {
-    margin-bottom: calc(sugar.margin(10) * -1);
+    margin-bottom: calc(sugar.margin(20) * -1);
+    margin-left: calc(sugar.margin(20));
     z-index: 10;
     position: relative;
 }
