--- a/packages/components/s-date-picker-component/src/css/s-date-picker.css
+++ b/packages/components/s-date-picker-component/src/css/s-date-picker.css
@@ -8,12 +8,12 @@ s-date-picker {
 
 .s-date-picker__input {
     flex-grow: 1;
-    padding-inline: sugar.scalable(sugar.theme(ui.datePicker.paddingInline));
-    padding-block: sugar.scalable(sugar.theme(ui.datePicker.paddingBlock));
+    padding-inline: sugar.theme(ui.datePicker.paddingInline);
+    padding-block: sugar.theme(ui.datePicker.paddingBlock);
 }
 .s-date-picker__button {
-    padding-inline: sugar.scalable(sugar.theme(ui.datePicker.paddingInline));
-    padding-block: sugar.scalable(sugar.theme(ui.datePicker.paddingBlock));
+    padding-inline: sugar.theme(ui.datePicker.paddingInline);
+    padding-block: sugar.theme(ui.datePicker.paddingBlock);
     cursor: pointer;
 }
 
