--- a/packages/websites/coffeekraken-io/src/views/generic/toolbar/toolbar.css
+++ b/packages/websites/coffeekraken-io/src/views/generic/toolbar/toolbar.css
@@ -4,7 +4,7 @@
     top: 100px;
     z-index: 10;
     padding-inline: 0;
-    padding-block: sugar.scalable(sugar.padding(20));
+    padding-block: sugar.padding(20);
 
     .s-icon {
         font-size: 0.8em;
