--- a/packages/websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
@@ -27,6 +27,18 @@
         @sugar.color.remap (accent, complementary);
     }
 
+    .__canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        mix-blend-mode: color;
+    }
+    #welcome-canvas-2 {
+        /* display: none */
+    }
+
     .__background {
         position: absolute;
         top: 0;
@@ -91,15 +103,114 @@
         overflow: hidden;
     }
     .__code {
-        color: white;
-        opacity: 0.2;
+        display: none;
+        color: rgba(0, 0, 0, 0.02);
         @sugar.font.family (code);
         mix-blend-mode: overlay;
         pointer-events: none;
 
         @sugar.theme.when (dark) {
-            color: sugar.color(main, surface);
+            color: rgba(255, 255, 255, 0);
         }
+    }
+
+    .__grains {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url('/src/img/coffee-grains-light.png');
+        background-size: contain;
+        background-position: 50% 50%;
+
+        @sugar.theme.when (dark) {
+            background: url('/src/img/coffee-grains-dark.png');
+        }
+    }
+
+    .__template {
+        text-align: right;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: rgba(0, 0, 0, 0.02);
+        border-radius: 20px;
+        overflow: hidden;
+        user-select: none;
+        opacity: 0.5;
+        box-shadow: 30px 30px 40px rgba(0, 0, 0, 0.1);
+        font-size: 40px;
+        color: rgba(0, 0, 0, 0);
+
+        @sugar.theme.when (dark) {
+            color: rgba(255, 255, 255, 0);
+            background: rgba(255, 255, 255, 0.01);
+            background: linear-gradient(
+                rgba(255, 255, 255, 0.05),
+                rgba(255, 255, 255, 0),
+                25deg
+            );
+        }
+    }
+    .__template-01 {
+        width: 600px;
+        height: 130px;
+        transform: translate(calc(-50% - 500px), calc(-50% - 220px))
+            rotateY(20deg) perspective(200px) rotateX(10deg) rotateZ(-3deg);
+    }
+    .__template-02 {
+        width: 200px;
+        height: 250px;
+        transform: translate(calc(-50% - 550px), calc(-50% + 30px))
+            rotateY(20deg) perspective(200px) rotateX(20deg) rotateZ(20deg);
+        font-size: 20px;
+    }
+    .__template-03 {
+        width: 150px;
+        height: 150px;
+        transform: translate(calc(-50% - 320px), calc(-50% + 210px))
+            rotateY(20deg) perspective(200px) rotateX(20deg);
+        box-shadow: 50px 50px 40px rgba(0, 0, 0, 0.1);
+        font-size: 40px;
+    }
+    .__template-04 {
+        width: 350px;
+        height: 150px;
+        transform: translate(calc(-50% + 400px), calc(-50% - 250px))
+            rotateY(20deg) perspective(200px) rotateX(20deg) rotateZ(5deg);
+        font-size: 25px;
+    }
+    .__template-05 {
+        width: 150px;
+        height: 250px;
+        transform: translate(calc(-50% + 520px), calc(-50% + 40px))
+            rotateY(20deg) perspective(200px) rotateX(20deg) rotateZ(-7deg);
+        box-shadow: 50px 50px 40px rgba(0, 0, 0, 0.1);
+        font-size: 50px;
+    }
+    .__template-06 {
+        width: 150px;
+        height: 150px;
+        transform: translate(calc(-50% + 285px), calc(-50% + 230px))
+            rotateY(20deg) perspective(200px) rotateX(-20deg) rotateZ(4deg);
+        font-size: 10px;
+    }
+    .__template-07 {
+        width: 650px;
+        height: 100px;
+        transform: translate(calc(-50% + 980px), calc(-50% + 40px))
+            rotateY(30deg) perspective(200px) rotateX(-35deg) rotateZ(15deg);
+        box-shadow: 50px 50px 40px rgba(0, 0, 0, 0.1);
+        font-size: 40px;
+    }
+    .__template-08 {
+        width: 600px;
+        height: 130px;
+        transform: translate(calc(-50% - 1000px), calc(-50% + 30px))
+            rotateY(20deg) perspective(200px) rotateX(-10deg) rotateZ(-6deg);
+        font-size: 20px;
     }
 
     .__content {
