--- a/packages/websites/coffeekraken-io/src/views/pages/markdown/markdown.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/markdown/markdown.css
@@ -10,20 +10,12 @@
     .toolbar {
         position: fixed;
         bottom: 0;
+        left: 50%;
         top: auto;
-        width: 100%;
-
-        &:after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            /* background: red; */
-            pointer-events: none;
-            @sugar.depth (10);
-            transform: rotate(180deg);
-        }
+        transform: translate(-50%, 0);
+        width: 1440px;
+        background: sugar.color(main, surface);
+        border-radius: sugar.border.radius();
+        box-shadow: 5px 10px 40px rgba(0, 0, 0, 0.05);
     }
 }
