--- a/packages/components/s-code-example-component/index.html
+++ b/packages/components/s-code-example-component/index.html
@@ -15,7 +15,7 @@
             define();
         </script>
 
-        <s-code-example toolbar-position="nav" default-style>
+        <s-code-example toolbar-position="nav">
             <template lang="js">
                 import __SClass from '@coffeekraken/s-class'; import __deepMerge
                 from '@coffeekraken/sugar/shared/object/deepMerge'; import
