--- a/packages/components/s-color-picker-component/index.html
+++ b/packages/components/s-color-picker-component/index.html
@@ -13,6 +13,6 @@
 
             define();
         </script>
-        <s-color-picker color="#ffff00" default-style />
+        <s-color-picker color="#ffff00" />
     </body>
 </html>
