--- a/packages/components/s-date-picker-component/src/css/s-date-picker.css
+++ b/packages/components/s-date-picker-component/src/css/s-date-picker.css
@@ -17,7 +17,7 @@ s-date-picker {
     cursor: pointer;
 }
 
-s-date-picker[default-style] {
+s-date-picker:not([bare]) {
     &:not([rtl]) {
         .s-date-picker__input {
             border-top-right-radius: 0;
