--- a/packages/components/s-range-component/index.html
+++ b/packages/components/s-range-component/index.html
@@ -6,7 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Range component</title>
 
-        <link rel="stylesheet" href="http://coffeekraken.io/dist/css/style.css" />
+        <link
+            rel="stylesheet"
+            href="http://coffeekraken.io/dist/css/style.css"
+        />
     </head>
     <body>
         <script type="module">
@@ -22,7 +25,7 @@
         <br />
         <br />
 
-        <s-range name="hello" value="100" tooltip default-style></s-range>
+        <s-range name="hello" value="100" tooltip></s-range>
 
         <s-range
             name="hello"
@@ -34,9 +37,13 @@
             target="#myCoolInput"
             tooltip
             style="width: 500px"
-            default-style
         ></s-range>
 
-        <input type="text" name="myCoolInput" class="s-input" id="myCoolInput" />
+        <input
+            type="text"
+            name="myCoolInput"
+            class="s-input"
+            id="myCoolInput"
+        />
     </body>
 </html>
