--- a/packages/builders/s-markdown-builder/src/partials/configExplorer/configExplorer.html
+++ b/packages/builders/s-markdown-builder/src/partials/configExplorer/configExplorer.html
@@ -1,7 +1,9 @@
-<h1>
-    Configuration explorer
-</h1>
+<h1>Configuration explorer</h1>
 
-<p>The configuration explorer display by default only the first config of each stacks. To display more, enter the search like for example "contact.*" or click on any link in the list...</p>
+<p>
+    The configuration explorer display by default only the first config of each
+    stacks. To display more, enter the search like for example "contact.*" or
+    click on any link in the list...
+</p>
 
-<s-config-explorer default-style />
+<s-config-explorer />
