--- a/packages/components/s-color-picker-component/src/css/s-color-picker.css
+++ b/packages/components/s-color-picker-component/src/css/s-color-picker.css
@@ -1,6 +1,3 @@
-.s-color-picker[default-style] {
-}
-
 s-color-picker {
     &:not([mounted]) > * {
         display: none;
@@ -8,7 +5,7 @@ s-color-picker {
 }
 
 .s-color-picker__picker {
-    [default-style] & {
+    :not([bare]) & {
         background: sugar.color(current, surface);
         overflow: hidden;
         @sugar.depth (sugar.theme(ui.colorPicker.depth));
@@ -23,7 +20,7 @@ s-color-picker {
     outline: none;
     border-radius: 0 !important;
 
-    [default-style] & {
+    :not([bare]) & {
         transition: sugar.transition(fast);
     }
 
