--- a/packages/components/s-config-explorer/index.html
+++ b/packages/components/s-config-explorer/index.html
@@ -13,6 +13,6 @@
             define();
         </script>
 
-        <s-config-explorer default-style />
+        <s-config-explorer />
     </body>
 </html>
