--- a/packages/components/s-side-panel-component/index.html
+++ b/packages/components/s-side-panel-component/index.html
@@ -21,29 +21,39 @@
         </script>
         <s-side-panel id="panel1" side="right" overlay>
             <p class="s-typo:p">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis odio magna. Phasellus euismod
-                pellentesque risus vel lobortis. Etiam iaculis arcu sed libero ullamcorper tincidunt. Donec dui massa,
-                efficitur sit amet condimentum eget, pulvinar et lorem. Aenean porta varius placerat. Donec feugiat
-                feugiat lorem nec egestas. Donec venenatis est purus, in pulvinar elit aliquam in. Cras in arcu vitae
-                lectus dignissim hendrerit. Vestibulum sagittis nibh nec ligula tempor, in rhoncus nisi maximus.
-                Suspendisse potenti. Praesent porta leo id mauris facilisis malesuada. Praesent a vehicula leo, sit amet
-                tincidunt magna. Sed ultricies condimentum odio, sit amet gravida lacus interdum ac. Interdum et
-                malesuada fames ac ante ipsum primis in faucibus. Donec vel libero sapien.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum quis odio magna. Phasellus euismod pellentesque risus
+                vel lobortis. Etiam iaculis arcu sed libero ullamcorper
+                tincidunt. Donec dui massa, efficitur sit amet condimentum eget,
+                pulvinar et lorem. Aenean porta varius placerat. Donec feugiat
+                feugiat lorem nec egestas. Donec venenatis est purus, in
+                pulvinar elit aliquam in. Cras in arcu vitae lectus dignissim
+                hendrerit. Vestibulum sagittis nibh nec ligula tempor, in
+                rhoncus nisi maximus. Suspendisse potenti. Praesent porta leo id
+                mauris facilisis malesuada. Praesent a vehicula leo, sit amet
+                tincidunt magna. Sed ultricies condimentum odio, sit amet
+                gravida lacus interdum ac. Interdum et malesuada fames ac ante
+                ipsum primis in faucibus. Donec vel libero sapien.
             </p>
         </s-side-panel>
 
         <a id="side-opener">Open panel</a>
 
-        <s-side-panel id="panel2" side="top" triggerer="#side-opener" overlay default-style>
+        <s-side-panel id="panel2" side="top" triggerer="#side-opener" overlay>
             <p class="s-typo:p">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis odio magna. Phasellus euismod
-                pellentesque risus vel lobortis. Etiam iaculis arcu sed libero ullamcorper tincidunt. Donec dui massa,
-                efficitur sit amet condimentum eget, pulvinar et lorem. Aenean porta varius placerat. Donec feugiat
-                feugiat lorem nec egestas. Donec venenatis est purus, in pulvinar elit aliquam in. Cras in arcu vitae
-                lectus dignissim hendrerit. Vestibulum sagittis nibh nec ligula tempor, in rhoncus nisi maximus.
-                Suspendisse potenti. Praesent porta leo id mauris facilisis malesuada. Praesent a vehicula leo, sit amet
-                tincidunt magna. Sed ultricies condimentum odio, sit amet gravida lacus interdum ac. Interdum et
-                malesuada fames ac ante ipsum primis in faucibus. Donec vel libero sapien.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum quis odio magna. Phasellus euismod pellentesque risus
+                vel lobortis. Etiam iaculis arcu sed libero ullamcorper
+                tincidunt. Donec dui massa, efficitur sit amet condimentum eget,
+                pulvinar et lorem. Aenean porta varius placerat. Donec feugiat
+                feugiat lorem nec egestas. Donec venenatis est purus, in
+                pulvinar elit aliquam in. Cras in arcu vitae lectus dignissim
+                hendrerit. Vestibulum sagittis nibh nec ligula tempor, in
+                rhoncus nisi maximus. Suspendisse potenti. Praesent porta leo id
+                mauris facilisis malesuada. Praesent a vehicula leo, sit amet
+                tincidunt magna. Sed ultricies condimentum odio, sit amet
+                gravida lacus interdum ac. Interdum et malesuada fames ac ante
+                ipsum primis in faucibus. Donec vel libero sapien.
             </p>
         </s-side-panel>
     </body>
