--- a/packages/components/s-side-panel-component/src/css/s-side-panel.css
+++ b/packages/components/s-side-panel-component/src/css/s-side-panel.css
@@ -25,12 +25,12 @@ s-side-panel {
     width: 100%;
     height: 100%;
 
-    [default-style] & {
+    :not([bare]) & {
         background: sugar.color(main, --alpha 0.3);
         transition: sugar.transition(default);
         opacity: 0;
     }
-    [default-style][active] & {
+    :not([bare])[active] & {
         opacity: 1;
     }
 }
@@ -44,7 +44,7 @@ s-side-panel {
         display: block;
     }
 
-    [default-style] & {
+    :not([bare]) & {
         transition: sugar.transition(default);
     }
 
