--- a/packages/builders/s-markdown-builder/src/partials/config/config.html
+++ b/packages/builders/s-markdown-builder/src/partials/config/config.html
@@ -3,7 +3,7 @@
 </span>
 
 <dl>
-    {{#each (config docmap path)}}
+    {{#each (configFromDocmap docmap path)}}
     <dt class="s-font:40 s-mbe:30">
         <header class="s-flex s-bg:main-surface s-radius">
             <div class="s-flex-item:grow s-tc:accent s-p:30">{{ @key }}</div>
